[package]
name = "experimental-jpeg-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
crossbeam-channel = "0.5.6"
image = { version = "0.24.5", default-features = false, features = ["jpeg_rayon", "png"] }
indicatif = { version = "0.17.3", features = ["rayon"] }
rayon = "1.6.1"
walkdir = "2.3.2"

[features]
default = ["keep-file-times"]
keep-file-times = []
